Card by name search complete

--- a/src/CardBlitz/CardBlitz.csproj
+++ b/src/CardBlitz/CardBlitz.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.65" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Factories\" />
+    <Folder Include="Helpers\" />
+  </ItemGroup>
+
 </Project>
